@@ -1,11 +1,12 @@
 package com.lvr.ihave.web.config;
 
+import java.util.Locale;
+
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.web.servlet.LocaleResolver;
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import java.util.Locale;
 
 public class MyLocaleResolver implements LocaleResolver {
     @Override
@@ -13,15 +14,15 @@ public class MyLocaleResolver implements LocaleResolver {
         //获取请求中的参数
         String language = request.getParameter("l");
 
-        //获取默认的
+        //获取默认的Locale
         Locale locale = Locale.getDefault();
 
         //解析获取到的参数
-        if (!StringUtils.isEmpty(language)){ //如果language这个不是空的
+        if (StringUtils.isNotEmpty(language)) { //如果language不为空
             //开始解析 zh_CN
             String[] s = language.split("_");
             //如果获取到参数就使用获取到的参数
-            return new Locale(s[0],s[1]);
+            return Locale.of(s[0],s[1]);
         }
         //如果没有获取到参数就是用默认的参数
         return locale;
